# c12-callisto-clients

./: .gitignore  .pylintrc  Dockerfile  README.md  configs.json  environment.yml  init_project.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  github-pages.yml  publish-to-pypi.yml
docs/: 0. README.ipynb  1. Short_introduction_to_Qiskit.ipynb  2. Using_the_C12_emulator.ipynb  2. Using_the_C12_simulator.ipynb  3. Working_with_jobs.ipynb  4. Using API.ipynb  5. Getting mid circuit states.ipynb  6. Physical parameters of the system.ipynb  6. Tket backend.ipynb  7. Tket backend.ipynb  8. Tket backend.ipynb  Example1.ipynb  README.md  build_docs.py  c12_callisto_clients.api.rst  c12_callisto_clients.pytket.extensions.callisto.backends.rst  c12_callisto_clients.pytket.extensions.callisto.rst  c12_callisto_clients.pytket.extensions.rst  c12_callisto_clients.pytket.rst  c12_callisto_clients.qiskit.rst  c12_callisto_clients.qiskit_back.rst  c12_callisto_clients.rst  conf.py  include_readme.rst  index.rst  modules.rst  versions.yaml
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_static/css/: custom.css
docs/_templates/sidebar/: variant-selector.html
docs/ovh/: 0. README.ipynb  1. Short_introduction_to_Qiskit.ipynb  2. Using_the_C12_emulator.ipynb  2. Using_the_C12_simulator.ipynb  3. Working_with_jobs.ipynb  4. Using API.ipynb  5. Getting mid circuit states.ipynb  6. General tutorial.ipynb  6. Physical parameters of the system.ipynb
notebook/: example.ipynb  setup.py
src/: __init__.py  main.py
src/api/: client.py  configs.py
src/c12_callisto_clients/: __init__.py  user_configs.py
src/c12_callisto_clients/api/: __init__.py  client.py  configs.py
src/c12_callisto_clients/myqlm/: async_provider.py  providers.py
src/c12_callisto_clients/pytket/: __init__.py
src/c12_callisto_clients/qiskit/: __init__.py  c12sim_backend.py  c12sim_job.py  c12sim_provider.py
src/c12_callisto_clients/qiskit_back/: c12sim_backend.py  c12sim_job.py  c12sim_provider.py
src/c12simulator_clients/: __init__.py  configs.json  user_configs.py
src/c12simulator_clients/api/: client.py  configs.py  exceptions.py
src/c12simulator_clients/qiskit_back/: c12sim_backend.py  c12sim_job.py  (+1 more)
src/mymodule/: utils.py
src/qiskit_back/: c12sim_backend.py  c12sim_job.py  c12sim_provider.py  exceptions.py
tests/: main_test.py
tests/mymodule/: utils_test.py
(+5 files in other folders)
