[tool.poetry]
name = "c12_callisto_clients"
version = "0.0.1"
description = ""
authors = ["Viktor Radovic"]

[tool.poetry.dependencies]
python = "~3.10"
qiskit = "^0.42.0"
requests = "^2.28.2"
pydantic = "^1.10.6"
traitlets = "5.9.0"
pytket = "^1.21.0"

[tool.poetry.dev-dependencies]
black = {extras = ["d"], version = "^23.1.0"}
debugpy = {git = "https://github.com/microsoft/debugpy.git", rev = "v1.6.6"}
pytest = "^7.1.1"
pre-commit = "^2.18.1"
coverage = "^6.3.2"
pylint = "^2.13.5"
jupyterlab = "^3.3.3"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = "*_test.py"
pythonpath = "src"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
